hphp/hack/test/typecheck/keyset_literal_wrong_bracket.php
<?hh // partial

function foo() : keyset<int> {
  return keyset{1, 2, 3};
}
